<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_margin="20dp"
     >
 <TextView
     android:id="@+id/password_setup_textview"
     android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/input_password"
    android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="36sp"
      />
 <EditText
     android:id="@+id/password_setup_edittext"
     android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/password_setup_textview"
    android:layout_alignRight="@+id/setup_password"
    android:layout_alignLeft="@+id/password_setup_textview"
    android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="36sp"
        android:singleLine="true"
        android:inputType="textPassword"
      />
 <TextView
     android:id="@+id/password_confirm_textview"
     android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/password_setup_edittext"
    android:text="@string/confirm_password"
    android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="36sp"
      />
 <EditText
     android:id="@+id/password_confirm_edittext"
     android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/password_confirm_textview"
    android:layout_alignRight="@+id/setup_password"
    android:layout_alignLeft="@+id/password_setup_textview"
    android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="36sp"
         android:singleLine="true"
        android:inputType="textPassword"
      />  
      
 <Button 
     android:id="@+id/setup_password"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/password_confirm_edittext"
     android:layout_toRightOf="@+id/password_confirm_textview"
     android:text="@string/ok"
     android:layout_marginTop="50dp"
     />

</RelativeLayout>